ADD: nuevos proyectos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1 class="titulo_nombre my-2 h2">Maximo Junior Apaza Chirhuana</h1>
           <h3 class="titulo_carrera my-2"><span class="typed"></span></h3>
           <h4 class="especialidades my-2">Laravel | Node JS | Spring Boot</h4>
-          <h4 class="especialidades my-2">React-JS | Angular| MySql | MongoDB | Git | Docker</h4><br>
+          <h4 class="especialidades my-2">React | React Native | PostgreSql | MongoDB | Git | Docker</h4><br>
           <button class="especialidades btn btn-lg btn-color-custom">Contactame</button>
         </div>
       </div>
@@ -92,17 +92,63 @@
           - Rock</p>
       </div>
     </div>
-    <h2 class="text-center my-4 subtitulo"> Mis Habilidades</h2>
+    <h2 class="text-center my-4 subtitulo">Mis Habilidades</h2>
     <div class="row" id="mis_habilidades">
       <div class="col-md-6 p-3">
-        <h4 class="subtitulo-h4 my-4">En lo mejor que me desempeño...</h4>
-        <p>Javascript</p>
-        <p>Java</p>
-        <p>PHP</p>
-        <p>SQL</p>
+        <p>
+          <li>Autodidacta</li>
+        </p>
+        <p>
+          <li>Trabajo en Equipo</li>
+        </p>
+        <p>
+          <li>Responsibilidad</li>
+        </p>
+        <p>
+          <li>Honestidad</li>
+        </p>
+        <p>
+          <li>Analisis de Problemas</li>
+        </p>
+        <p>
+          <li>Comprension de Codigo Ajeno</li>
+        </p>
+        <p>
+          <li>Pasion Proactiva</li>
+        </p>
       </div>
       <div class="col-md-6 p-3 text-justify d-flex flex-column justify-content-center align-items-center"><img
           class="img-fluid" src="img/habilidades.svg" alt="alt"></div>
+    </div>
+    <h2 class="text-center my-4 subtitulo">Tecnologias favoritas ❤ </h2>
+    <div class="row" id="tecnologias">
+      <div class="col-md-6 p-3 text-justify d-flex flex-column justify-content-center align-items-center"><img
+          class="img-fluid" src="img/technologies.jpg" alt="alt"></div>
+      <div class="col-md-6 p-3">
+        <h4 class="subtitulo-h4 my-4">En lo mejor que me desempeño...</h4>
+        <p>
+          <li>Typescript</li>
+        </p>
+        <p>
+          <li>React</li>
+        </p>
+        <p>
+          <li>React Native</li>
+        </p>
+        <p>
+          <li>Node Js</li>
+        </p>
+        <p>
+          <li>Nest JS</li>
+        </p>
+        <p>
+          <li>PostgreSQL</li>
+        </p>
+        <p>
+          <li>GraphQL</li>
+        </p>
+      </div>
+
     </div>
     <hr>
   </main>
@@ -156,14 +202,13 @@
           <div class="card-proyect-name text-center">
             <h4>Ripley Pago</h4>
           </div>
-        </div>        
+        </div>
       </div>
       <div class="col-md-6 col-lg-6">
         <div class="card-proyect">
           <div class="card-proyect-content"> <img class="img-fluid" src="img/proyectos/sonar-cloud.png" alt="alt"
               loading="lazy">
-            <div class="card-proyect-hover"><a class="card-circle-span" target="_black"
-                href="#"><i
+            <div class="card-proyect-hover"><a class="card-circle-span" target="_black" href="#"><i
                   class="fas fa-link"></i></a></div>
           </div>
           <div class="card-proyect-name text-center">
