ADD: imagen de dvuelveR

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="row">
       <div class="col-md-6 col-lg-6">
         <div class="card-proyect">
-          <div class="card-proyect-content"> <img class="img-fluid" src="img/proyectos/dvuelveR.PNG" alt="alt"
+          <div class="card-proyect-content"> <img class="img-fluid" src="img/proyectos/dvuelveR.png" alt="alt"
               loading="lazy">
             <div class="card-proyect-hover"><a class="card-circle-span" target="_black"
                 href="https://formulario.ripley.com.pe"><i class="fas fa-link"></i></a></div>
