--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
         <h4 class="subtitulo-h4 my-2">Algunas Palabras...</h4>
         <p>Soy un joven <b>muy responsable</b>, feliz e interesante de conocer. Mi mayor caracteristica es mi curiosidad
           por aprender cosas nuevas esto me ha vuelto un autodidacta.</p>
-        <p>Soy programador web, me fascina la programacion y la informatica <b>desde los 16 años.</b> Me encanta
+        <p>Soy <b>Programador Full Stack Javascript</b> con más <b>5 de años de experiencia</b>, me fascina la programacion y la informatica <b>desde los 16 años.</b> Me encanta
           investigar sobre tecnologias nuevas como lenguajes de programacion en tendencia, patrones de diseño que me
           ayuden a solucionar una problematica en mi aplicación.</p>
-        <p>Me gusta compartir mis conocimientos enseñando a lo demas, ya sea a compañeros de trabajo o amigos de esa
-          manera uno repasa indirectamente.</p>
+        <p>Me gusta compartir mis conocimientos enseñando a lo demas, ya sea a compañeros de trabajo o amigos de esa manera uno repasa indirectamente.</p>
         <div class="text-center">
-          <a class="btn btn-lg btn-color-custom" target="_blank" href="img/certificados/curriculumv3.pdf">
+          <a class="btn btn-lg btn-color-custom" target="_blank" href="img/certificados/cv.pdf">
             <i class="far fa-file-alt"></i> Descargar CV</a>
         </div>
       </div>
@@ -147,6 +146,9 @@
         <p>
           <li>GraphQL</li>
         </p>
+        <p>
+          <li>Amazon Web Services</li>
+        </p>
       </div>
 
     </div>
@@ -155,6 +157,18 @@
   <section class="container-custom my-4">
     <h2 class="text-center my-4 subtitulo" id="Proyectos"> Proyectos Destacados</h2>
     <div class="row">
+      <div class="col-md-6 col-lg-6">
+        <div class="card-proyect">
+          <div class="card-proyect-content"> <img class="img-fluid" src="img/proyectos/culqi-app.png" alt="alt"
+              loading="lazy">
+            <div class="card-proyect-hover"><a class="card-circle-span" target="_black"
+                href="https://culqi.com/c2c/"><i class="fas fa-link"></i></a></div>
+          </div>
+          <div class="card-proyect-name text-center">
+            <h4>Culqi App</h4>
+          </div>
+        </div>
+      </div>
       <div class="col-md-6 col-lg-6">
         <div class="card-proyect">
           <div class="card-proyect-content"> <img class="img-fluid" src="img/proyectos/dvuelveR.png" alt="alt"
@@ -365,6 +379,7 @@
           </div>
         </div>
       </div>
+     
       <div class="col-md-6 col-lg-6">
         <div class="card-proyect">
           <div class="card-proyect-content"> <img class="img-fluid" src="img/proyectos/todoapp.png" alt="alt"
